@startuml
'https://plantuml.com/class-diagram
title 合约结构模型

'电池溯源模块
package 电池模块 <<Rectangle>> {
class BatteryContract {
电池id
批次号
电池状态
其他电池信息
当前所有者
溯源记录
+ 查询溯源记录()
+ 安全认证()
# 电池流转()
# 电池拆解()
+ 查询电池状态()
}
}


'机构准入模块
package 企业准入模块 <<Rectangle>> {
class EntAccess {
企业address
企业名称
统一社会信用代码
电话
法定代表人
地址
状态（正常、注销）
备注
准入审批方address
审批时间

+ 查询企业准入信息()
}
}

'竞价交易模块
package 竞价交易模块 <<Rectangle>> {
class TradeContract {
卖方地址
买方地址
交易信息
交易状态
最低金额
期望金额
成交金额
结束时间
交易时间
当前最高价买方地址
当前最高价格
记录参加过竞价的买方

+ 竞价交易()
+ 指定交易()
# 交易成交()
# 交易撤回()
}
}

'积分模块
package 积分模块 <<Rectangle>> {
class DAO {
DAO账户积分
DAO账户列表

+ 是否DAO账户()
+ 添加DAO账户()
# 移除DAO账户()
}


class PointData {
账户对应的积分
账户对应的冻结积分
账户列表
积分总额

+ 积分转移()
+ 冻结积分()
+ 解冻积分()
+ 从冻结积分中转移到指定账户()
+ 设置账户()
+ 设置账户积分()
+ 设置积分总额()
}


class PointController {
账户积分操作记录列表
DAO信息
账户积分信息

+ 注册账户()
+ 初始化积分()
+ 添加DAO账户()
+ 查询指定账户积分()
+ 企业缴纳积分()
# DAO向目标账户转移积分()
+ 普通账户之间转移积分()
+ 积分冻结()
+ 从冻结积分中转移积分()
+ 积分解冻()
+ 获取指定账户积分操作记录()
}

PointController <-- PointData
PointController <-- DAO
}



@enduml